New upstream release 1.2.1-1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-08-28 Fabien Dubosson <fabien.dubosson@gmail.com>
+
+    * 1.2.1-1:
+    New upstream release
+
 2017-08-15 Fabien Dubosson <fabien.dubosson@gmail.com>
 
     * 1.2-3:
