--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,3 +16,6 @@
 - enable parallel execution
 - add ini files to backup
 - remove depends: webkitgtk2
+
+# 5.5.6-2 - 2021-01-17 - Thomas Holder
+- use wxgtk3
