--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 
 [2020-12-29]
-* integrate kopano-vmime Your Name
+* integrate kopano-vmime
 
 [2021-01-20]
-* handle git builds Your Name
+* handle git builds
