--- a/changelog
+++ b/changelog
@@ -1,56 +1,56 @@
 
 [2020-02-19]
-* init Your Name
+* init
 
 [2020-03-10]
-* update fetchmails Martina Pietruschka
+* update fetchmails
 
 [2021-01-04]
-* add pythen dependencies ; add optional dependencies to make dependencies ; first files for templates Your Name
+* add pythen dependencies ; add optional dependencies to make dependencies ; first files for templates
 
 [2021-01-05]
-* webapp first try Your Name
-* fixed cp Your Name
-* removed/added destdir / added ant-contrib Your Name
-* build webapp with destdir Your Name
-* build webapp without destdir Your Name
-* build webapp without destdir -syntax error Your Name
+* webapp first try
+* fixed cp
+* removed/added destdir / added ant-contrib
+* build webapp with destdir
+* build webapp without destdir
+* build webapp without destdir -syntax error
 
 [2021-01-06]
-* build webapp without destdir -syntax error Your Name
+* build webapp without destdir -syntax error
 
 [2021-01-07]
-* webapp Your Name
-* webapp: compress static Your Name
-* syntax Your Name
-* include noct working Your Name
-* paths Your Name
-* compress Your Name
-* paths Your Name
-* ... Your Name
+* webapp
+* webapp: compress static
+* syntax
+* include noct working
+* paths
+* compress
+* paths
+* ...
 
 [2021-01-08]
-* build with temporary php.ini Your Name
-* ... Your Name
-* use templates Your Name
+* build with temporary php.ini
+* ...
+* use templates
 
 [2021-01-11]
-* use templates Your Name
+* use templates
 
 [2021-01-12]
-* handle repo without tags Your Name
-* add addons Your Name
+* handle repo without tags
+* add addons
 
 [2021-01-13]
-* add addons Your Name
-* redefind _install Your Name
+* add addons
+* redefind _install
 
 [2021-01-14]
-* distribute /etc/kopano/*.cfg in kopano-core package Your Name
+* distribute /etc/kopano/*.cfg in kopano-core package
 
 [2021-01-15]
-* add addons Your Name
+* add addons
 
 [2021-01-20]
-* inifile Your Name
-* handle git builds Your Name
+* inifile
+* handle git builds
