--- a/changelog
+++ b/changelog
@@ -1,10 +1,10 @@
 
 [2021-01-08]
-* use templates Your Name
-* first try plugin Your Name
+* use templates
+* first try plugin
 
 [2021-01-09]
-* first try plugin Your Name
+* first try plugin
 
 [2021-01-11]
-* use templates Your Name
+* use templates
