--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
 
 [2021-01-11]
-* use templates Your Name
-* add addons Your Name
-* handle repo without tags Your Name
+* use templates
+* add addons
+* handle repo without tags
