--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 
 [2021-01-11]
-* add addons Your Name
+* add addons
 
 [2021-01-12]
-* handle repo without tags Your Name
+* handle repo without tags
