Updated skintest2.jar location

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-01-23 Matthew "Madness" Evan <mattmadness@tutanota.com>
+
+	* alpha3pre7-3 :
+	Updated Changelog
+	Updated skintest2.jar web location to version in Wayback Machine
+
 2013-01-28 Frederik "Freso" S. Olesen <archlinux@freso.dk>
 
 	* alpha3pre7-2 :
