--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+1.5.6 - Updated to 1.5.6 Upstream
 Added sha256sums and post_upgrade
 1.5.5 - Updated to 1.5.5 Upstream
 1.5.4 - Updated to 1.5.4 Upstream
