Removed post_upgrade and glib-compile-schemas calls
Signed-off-by: Odin Vex <44311901+OdinVex@users.noreply.github.com>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Removed post_upgrade and glib-compile-schemas calls
 1.5.6 - Updated to 1.5.6 Upstream
 Added sha256sums and post_upgrade
 1.5.5 - Updated to 1.5.5 Upstream
