--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2023-06-28 Thien An Dang Thanh <thienandangthanh@gmail.com>
+	* 2.10.0-1
+	- Version bump
+
+2023-06-28 Thien An Dang Thanh <thienandangthanh@gmail.com>
 	* 2.9.8-1
 	- Version bump
 
